--- a/Proposal.tex
+++ b/Proposal.tex
@@ -146,7 +146,12 @@ Multi-level and -dimensional integrative bioinformatical analysis to elucidate t
 %Describe how the concepts, methods, technologies, treatments, services, or preventative interventions that drive this field will be changed if the proposed aims are achieved.
 %=================================================
 %=================================================
-The amount of (public) biological data has exploded in the last years, even outpacing Moore's law, which is the result in the current advances in technology (both in performance and costs).
+The amount of (public) biological data has exploded in the last years -even outpacing Moore's law- which is the result of the advances in omics-technologies, like Next-Generation Sequencing (NGS) and Mass-Spectrometry (MS), in both performance and costs. Aside from the sheer size, a second factor for the highly complex nature of current biomedical research is the addition of other dimensions, like time-series or treatments to the aforementioned omics-levels. While there are plenty of studies on single-level data analysis \citep{Huttenhower2010}, both basic research and industry agree that data-integration is key to understand the complex nature of biology more thoroughly \citep{Gomez-Cabrero2014, Searls2005}.
+
+
+
+
+%of da are Several studies, that have combined multiple levels or dimensions have been performed \citep{Low2013}
 %\cite{Gomez-Cabrero2014} geeft mooie inleiding (en over de wensen van de community)
 \subsection*{Originality and innovative character} 
 %=================================================
