--- a/Proposal.tex
+++ b/Proposal.tex
@@ -1,19 +1,3 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Journal Article
-% LaTeX Template
-% Version 1.3 (9/9/13)
-%
-% This template has been downloaded from:
-% http://www.LaTeXTemplates.com
-%
-% Original author:
-% Frits Wenneker (http://www.howtotex.com)
-%
-% License:
-% CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 %----------------------------------------------------------------------------------------
 %	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
 %----------------------------------------------------------------------------------------
@@ -34,7 +18,7 @@
 \usepackage[hang, small,labelfont=bf,up,textfont=it,up]{caption} % Custom captions under/above floats in tables or figures
 \usepackage{booktabs} % Horizontal rules in tables
 \usepackage{float} % Required for tables and figures in the multi-column environment - they need to be placed in specific locations with the [H] (e.g. \begin{table}[H])
-\usepackage{hyperref} % For hyperlinks in the PDF
+\usepackage[hidelinks]{hyperref} % For hyperlinks in the PDF
 
 \usepackage{lettrine} % The lettrine is the first enlarged letter at the beginning of the text
 \usepackage{paralist} % Used for the compactitem environment which makes bullet points with less space between them
@@ -46,7 +30,8 @@
 \renewcommand{\abstractnamefont}{\normalfont\bfseries} % Set the "Abstract" text to bold
 \renewcommand{\abstracttextfont}{\normalfont\small\itshape} % Set the abstract itself to small italic text
 \usepackage[super]{natbib}
-\bibliographystyle{apalike}
+\setlength{\bibsep}{0.0pt}
+\bibliographystyle{unsrtnat}
 \usepackage{titlesec} % Allows customization of titles
 \renewcommand\thesection{\Roman{section}} % Roman numerals for the sections
 \renewcommand\thesubsection{\Roman{subsection}} % Roman numerals for subsections
@@ -115,8 +100,9 @@ Summary of the research
 Layman's summary
 \end{center}}    % clear the title
 \begin{abstract}\noindent 
-\lipsum[1]
+The biomedical research community wants to be able to study more biological signals than one at the same time, because the biology of, for example, cancer is so complex. However, integrating diverse sets of biological signals is currently one of the main challenges in multiple fields of study. To overcome this, we propose the use of Semantic Web-methods: these are specifically designed for integrating vast amounts of different data (from the internet). Furthermore, it allows users to describe, analyse and test their data interactively and dynamically via visual representations displayed in the browser. One of the fields that would benefit greatly from these methods are those, that find the cancer-causing consequences of changes in parts of chromosomes that do not hold a gene: the non-coding genomic regions. A preliminary study shows the added performance of these methods in biology: researchers are able to describe, analyse and test 20 times more biological questions in the same time, compared to conventional methods. We thus propose to develop these methods further for the research-community (and biology in particular) and show their added benefits by performing research on variations in the non-coding genomic regions in cancer. \\
 \medskip
+
 \noindent \textbf{Keywords:} structural variation, multi-level data integration, next-generation sequencing, cancer, visual analytics
 \end{abstract}
 
@@ -146,7 +132,7 @@ Multi-level and -dimensional integrative bioinformatical analysis to elucidate t
 %Describe how the concepts, methods, technologies, treatments, services, or preventative interventions that drive this field will be changed if the proposed aims are achieved.
 %=================================================
 %=================================================
-The amount of (public) biological data has exploded in the last years -even outpacing Moore's law- which is the result of the advances in omics-technologies, like Next-Generation Sequencing (NGS) and Mass-Spectrometry (MS), in both performance and costs. Aside from the sheer size, a second factor for the highly complex nature of current biomedical research is the addition of other dimensions, like time-series or treatments to the aforementioned omics-levels. While there are plenty of studies on single-level data analysis, both academia and industry agree that data-integration is key to understanding the complex nature of biology more thoroughly \citep{Gomez-Cabrero2014, Huttenhower2010, Searls2005, Hamid2009}. However, only a few layers and/or dimensions have been integrated per study and results are -for the most part- cherry picked, instead of data-wide. This is mainly due to the methods used in integration-studies, which are limited due to the large amounts of parsing-time (i.e. the time to convert various file/region-formats): most of them are set up in the same manner as individual level-experiments, whereafter they are combined. The limited number of truly integrative studies use computational approaches to reconstruct biological networks. While this is a valid strategy, scaling the analysis from the bacteria used by \citet{Karr2012} and \citet{Lerman2012} to multi-cellular organisms proves to be difficult. The most obvious reasons for this are the complexity of the used mathematical methods, the integration of multiple data-sources (with varying file-formats) and/or due to the use of a set-in-stone database-structure. 
+The amount of (public) biological data has exploded in the last years -even outpacing Moore's law- which is the result of the advances in omics-technologies, like Next-Generation Sequencing (NGS) and Mass-Spectrometry (MS), in both performance and costs. Aside from the sheer size, a second factor for the highly complex nature of current biomedical research is the addition of other dimensions, like time-series or treatments to the aforementioned omics-levels and other types of data from the same level (e.g. miRNA-seq combined with RNA-seq). While there are plenty of studies on single-level data analysis, both academia and industry agree that data-integration is key to understanding the complex nature of biology more thoroughly \citep{Gomez-Cabrero2014, Huttenhower2010, Searls2005, Hamid2009}. However, only a few layers and/or dimensions have been integrated per study and results are -for the most part- cherry picked, instead of data-wide. This is mainly due to the methods used in integration-studies, which are limited due to the large amounts of parsing-time (i.e. the time to convert various file/region-formats): most of them are set up in the same manner as individual level-experiments, whereafter they are combined. These methods lead high amounts of analytical time, as was the case in the study of \citet{Munoz2011}: every two months of data-accumulation costed two years of analysis. The limited number of truly integrative studies use computational approaches to reconstruct biological networks. While this is a valid strategy, scaling the analysis from the bacteria used by \citet{Karr2012} and \citet{Lerman2012} to multi-cellular organisms proves to be difficult. The most obvious reasons for this are the complexity of the used mathematical methods, the integration of multiple data-sources (with varying file-formats) and/or due to the use of a set-in-stone database-structure. 
 \medskip
 
 \noindent
@@ -156,22 +142,22 @@ Compared to other relational database management systems, RDF is completely flex
 \medskip
 
 \noindent
-When data is integrated in Semantic Web RDF-database (TripleStore) and a relevant set of subjects, predicates and/or object is extracted using SPARQL, the remaining dataset is still very large. The abstract and complex nature of this "hairball" makes it hard to formalise an analytical problem to solve. \textbf{To create interactive and dynamic visual representations of a dataset, we propose to use of the multidisciplinary theories and methods of \textit{visual analytics}}. \citet{Thomas2005} describe this field in 2005 as "\textit{Visual analytics is the science of analytical reasoning facilitated by interactive visual interfaces.}". It uses analytical methods from fields as computer science and statistics to 
-perform analyses and visualisation-techniques from cognitive and design sciences, such that the data can be effectively analysed (i.e. hypotheses formed and analysed) by the user.
+When data is integrated in Semantic Web RDF-database (TripleStore) and a relevant set of subjects, predicates and/or object is extracted using SPARQL, the remaining dataset is still very large. The abstract and complex nature of this "hairball" makes it hard to formalise an analytical problem to solve. \textbf{To create interactive and dynamic visual representations of a dataset, we propose to use of the multidisciplinary theories and methods of \textit{visual analytics}}. \citet{Thomas2005} describe this field in 2005 as "\textit{Visual analytics is the science of analytical reasoning facilitated by interactive visual interfaces.}". It uses analytical and statistical methods from fields as computer science and statistics and visualisation-techniques from cognitive and design sciences, such that the data can be effectively analysed (i.e. hypotheses formed and analysed) by the user. The JavaScript library Data Driven Documents (\textit{D3.js}) is perfect implementing linked data -which itself is already a graph- within visual analytics, as it is focussed on structuring data for dynamic, web-based (using current standards like HTML \& SVG) visualisations \cite{Bostock2011}. And since it is embedded in HTML, additional operators (e.g. buttons, SPARQL-forms) can be added. Due to these benefits, the use of D3.js in visual analytics is increasing, with a notable biology-specific example in Epiviz2\cite{Chelaru2014}. However, this tool only takes a specific set of data-formats and -levels and -more importantly- only shows a specific genomic region, instead of the complete scope. This leads to "\textit{cherry picking}", instead of data-focussed formulation and analysis of hypotheses.
 \medskip
 
 \noindent
-Usage case: structural variants of non-coding regions in cancer
+To illustrate to possibilities of the fully integrative multi-level and -dimensional visual analytics,\textbf{ we propose to use our methods to study to consequences of structural variations at non-coding loci in cancer on other levels.} The heterogeneous samples and datasets of cancer make it one of the most computationally demanding types of integrative biology. This technical challenging topic is therefore a perfect illustration of the possibilities of our methods.
 
+While the consequences of structural variations in coding regions are well studied due to the relative ease of finding consequencial changes in the transcript and proteins\cite{McLaren2010}, computational methods for the non-coding regions are just starting to come up in the literature of 2014\cite{Khurana2013,Kircher2014}. There already have been successfully studies, linking non-coding regions to colorectal- and skin-cancer\cite{Ongen2014,Huang2013}. The young nature of the used methods is visible in their output: only a prioritisation-score, based on the probability to be a causal variant, is given. Combining these scores with our linked-data methods -using both self-generated and public data- would lead to further understanding of the mechanisms of cancer. 
+
+
+%Usage case: structural variants of non-coding regions in cancer
+%twee dingen zeker noemen: hetrrogeneous dataset en de complicaties van multiu-level en dimensional in kanker-onderzoek
+%
 
 %\cite{Gomez-Cabrero2014} geeft mooie inleiding (en over de wensen van de community)
 
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=0.75\textwidth]{DifferencesInDoingThings}
-    \caption{\textbf{Differences between current integration techniques and RDF.} When a researcher has a question like \textbf{A}, he/she has to go through a series of parsing and interception steps (data juggling), like in \textbf{B}. External sources have to be fully downloaded and converted, before use. Using our proposed pipeline (shown in \textbf{C}), results in the standard conversion to RDF. Then, a question can be formulated in SPARQL (\textbf{D}), incorporating relevant outside sources, which can be easliy changed without having to juggle the data again.}
-    \label{fig:awesome_image}
-\end{figure}
+
 \subsection*{Originality and innovative character} 
 %=================================================
 %=================================================
@@ -180,26 +166,39 @@ Usage case: structural variants of non-coding regions in cancer
 %Explain any refinements, improvements, or new applications of theoretical concepts, approaches or methodologies, instrumentation, or interventions.
 %=================================================
 %=================================================
-%\cite{Sahoo2008} geeft heel veel info over BIO-RDF. Information gain through entailment reasoning is an important advantage of ontology-based data integration.
-
-EDWINS PRESENTATIE: ONE-DIMENSIONAL DATA STILL REQUIERS OTHER DATAT TYPES - SMALL RNA-SEQ, CHIP-SEQ ETC
-INTERGRATION IS VERY HARD: MET ALBERT HECK KOSTTE HET TWEE MAANDEN OM DATA TE GENEREREN EN TWEE JAAR OM TE INTEGREREN EN ANALYSEREN.
-
-ALBERT HECK: GROOT ONDERZOEK OVER STAMCELLEN: DATA INTEGRATIE AND MINING IN AUSTRALIE... PCA VAN PROT, RNA, GEN AND METH KOMEN OVEREEN
-
-
-
-There have already been various studies on integration of biological signals with the aid of semantic web technologies. However, the momentum is lacking: until 2014, no big databases were available in RDF-format. This meant that bioinformamtical research involving RDF had no momentum, as they could only integrate their own data, like the integration of RDF-methods in microarray analyses by \citet{Szpakowski2009} in 2009. Recently, EMBL-EBI has opened their own RDF-platfom, boasting six big data-sources (Gene Expression Atlas, ChEMBL, BioModels, Reactome, BioSamples and UniProt \cite{Jupp2014}. This was the boost of momentum needed to further incorporate RDF in biological analyses.
-
-However, there are two main limitations of this relatively young incorporation: a standard language for denoting triples (e.g. chromosome locations) is missing and the focus lies at linking database-accessions \citep{Ruttenberg2007}. While the first limitation is also a strength (everybody can use their own dialect), a standardisation-step will enable researchers in all fields of biology to fully benefit from the integrative benefits of the Semantic Web. The second limitation is  severely restricting the use of RDF in NGS- and MS-based methods: there are no tools to convert the common formats, like the \textit{Variant Call Format} (VCF) and \textit{Sequence Alignment Format} (SAM), to triples. One of the main innovative points of our proposal is the development of methods to handle these NGS- and MS-based formats for use in the Semantic Web. This will result in a broader use of semantic web-technologies for the research community, by enabling the coupling of (own) NGS- and MS-data to existing RDF-databases.
+The 2014 survey of \citet{Gomez-Cabrero2014} showed that the questioned biomedical academics had the highest interest (78.2 percent) in the integration of multiple omics-datasets and that there was a high need for standardized tools and data-types. Especially data-storage, -exploration and -exploitation were found the be key: their conclusions were best summarized by \textit{the need for having exploration tools, which combine summery statistics and interactive visualisations, to analyse heterogeneous data-sets}.
 \medskip
 
 \noindent
-added value of linked data visual analytics TOV standaard methodes
+There have already been various studies on integration of biological signals with the aid of semantic web technologies, as the power of ontology-based entailment reasoning is widely acknowledged\cite{Sahoo2008}. However, the momentum is lacking: until 2014, no big databases were available in RDF-format. This meant that bioinformamtical research involving RDF had no momentum, as they could only integrate their own data, like the integration of RDF-methods in microarray analyses by \citet{Szpakowski2009} in 2009. Recently, EMBL-EBI has opened their own RDF-platfom, boasting six big data-sources (Gene Expression Atlas, ChEMBL, BioModels, Reactome, BioSamples and UniProt \cite{Jupp2014}. This was the boost of momentum needed to further incorporate RDF in biological analyses.
+
+However, there are two main limitations of this relatively young incorporation: a standard language for denoting triples (e.g. chromosome locations) is missing and the focus lies at linking database-accessions \citep{Ruttenberg2007}. While the first limitation is also a strength (everybody can use their own dialect), a standardisation-step will enable researchers in all fields of biology to fully benefit from the integrative benefits of the Semantic Web. The second limitation is  severely restricting the use of RDF in NGS- and MS-based methods: there are no tools to convert the common formats, like the \textit{Variant Call Format} (VCF) and \textit{Sequence Alignment Format} (SAM), to triples. An example of this is  \textit{bio2rdf}\cite{Belleau2008}: a "\textit{RDFizer}", which converts common databases, like the ones from NCBI, to triplestores. One of the main innovative points of our proposal is the development of methods to handle these NGS- and MS-based formats for use in the Semantic Web. This will result in a broader use of semantic web-technologies for the research community, by enabling the coupling of (own) NGS- and MS-data to existing RDF-databases.
 \medskip
 
 \noindent
-innovatie van cancer NC-SV
+%added value of linked data visual analytics TOV standaard methodes ( verwijs naar pilot study)
+The implementation of web-based visual analytics for RDF-databases is another major innovative point in this proposal. Combining Semantic Web-technology with this will create a paradigm shift in the way integrative analysis of (biological) data is done. Visual analytics have been shown to result in the most optimal analysis-effectivity, as it allows the user to combine the data with their own background and intuition (fig. \ref{fig:ae}). Not only can data be more effectively analysed, but it can also be better understood and presented, due to the ability to provide an overview of the complete dataset \cite{Thomas2005, Keim}. 
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.75\textwidth]{autoVSexplo}
+    \caption{\textbf{Trade-offs between automated and explorative analysis.} By combining automated analyses, where appropriate, with the background and intuition of the user, an optimal amount of effectivity can be attained. Picture taken from \citet{Keim}.}
+    \label{fig:ae}
+\end{figure}
+\medskip
+
+\noindent
+While there has already been a large amount of work in the field of computational cancer research, the vast majority of large-scale integrative studies have been performed on the coding-regions (which account for 1,5 percent of the total size) of the genome\cite{ENCODE}. Genome-Wide Association Studies (GWASs) on a broad range of (hereditary) cancers have shown, that non-coding locations are associated with these diseases. Until 2013, however, tools and sources to find the precise causative variations in non-coding genomic regions were limited. In the last two years, several advances have made it possible to asses the consequences of individual variations in non-coding regions\cite{Ongen2014,Khurana2013}, but no large-scale integrative studies have been performed (partly due to the current state of integrative methods). With our new methods, we will be in the position to do fully integrative studies on the underlying mechanisms and consequences of (structural) variation in cancer.
+
+\subsection*{Pilot-study}
+To asses to feasibility of our proposal, a small-scale pilot-study was done on de data of \citet{VanHeesch2014}. This dataset includes transcriptome data of mRNA's, bound to a number (1-7+) of ribosomal units and matching exome-data. If one would be interested to look at the molecular functions of a gene, which transcripts have have a bias for one SNP, a disproportional amount of time is lost on parsing, intersecting and downloading various types of data (fig. \ref{fig:awesome_image}). With the current methods, twelve set-operations (e.g. intersections, unions) have to performed on approximately 5gb of data and three datasets ($\pm$15gb) have to be completely downloaded, before a simple curiosity-driven question can be answered. Approximately three and a half hours was needed to perform this, in contrast to one hour with our methods. Of this hour, more than fifty minutes were used to convert VCF to RDF and load the 4store database: every query hereafter takes up approximately 10 minutes. This pilot illustrates two important factors: the low-complex nature of the proposed methods and the valuable property of having a separate query-stage, which results in being able to make more than ($\frac{(8*60)-50}{10}= $) forty queries in eight hours, instead of approximately ($\frac{8-3,5}{3,5}= $) two queries in the currently used methods.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.75\textwidth]{DifferencesInDoingThings}
+    \caption{\textbf{Differences between current integration techniques and RDF.} When a researcher has a question like \textbf{A}, he/she has to go through a series of parsing and interception steps (data juggling), like in \textbf{B}. External sources have to be fully downloaded and converted, before use. Using our proposed pipeline (shown in \textbf{C}), results in the standard conversion to RDF. Then, a question can be formulated in SPARQL (\textbf{D}), incorporating relevant outside sources, which can be easily changed without having to juggle the data again.}
+    \label{fig:awesome_image}
+\end{figure}
 \subsection*{Methods and techniques} %M&M
 %=================================================
 %=================================================
@@ -213,9 +212,9 @@ innovatie van cancer NC-SV
 % Please add the following required packages to your document preamble:
 % \usepackage[table,xcdraw]{xcolor}
 % If you use beamer only pass "xcolor=table" option, i.e. \documentclass[xcolor=table]{beamer}
-\begin{center}
 
 \begin{table}[h]
+\begin{center}
 \begin{tabular}{lllllllll}
                                                 & \multicolumn{8}{c}{Semesters}                                                                                                                                                                                                                                                                                                                                                                                 \\ \cline{2-9} 
                                                 & S1                                              & S2                                              & S3                                              & S4                                              & S5                                              & S6                                              & S7                                              & S8                                              \\ \hline
@@ -232,11 +231,14 @@ innovatie van cancer NC-SV
 \hspace*{1em} Consequences of Cancer-SV's       &                                                 &                                                 &                                                 &                                                 & \cellcolor[HTML]{656565}                        & \cellcolor[HTML]{656565}                        & \cellcolor[HTML]{656565}                        & \cellcolor[HTML]{656565}                        \\
 \textbf{Writing thesis}                         &                                                 &                                                 &                                                 &                                                 &                                                 &                                                 &                                                 & \cellcolor[HTML]{343434}                       
 \end{tabular}
+\end{center}
 \end{table}
 
-\end{center}
+
 \subsection*{Collaboration}
 possibles:
+
+hubrecht: organoids! veel cancer-dingetjes te krijgen dus (clonal)
 
 Horizon-groep (cancer gneomics centre)
 
@@ -253,7 +255,7 @@ Vrij snel te incorpporeren: de meeste dingen zijn er al
 cancer NC-SV is nog weinig over bekend: mogelijke nieuwe targets voor cancer screening and or treatment: sociaal en pharma.
 
 
-%\cite{Gomez-Cabrero2014} geeft wensen van de community aan
+
 
 %-------------------------------------------------------
 %	REFERENCE LIST
@@ -264,8 +266,10 @@ cancer NC-SV is nog weinig over bekend: mogelijke nieuwe targets voor cancer scr
 %\renewcommand{\refname}{\LARGE\scshape\centering References} %
 %\titleformat*{\section}{\LARGE\scshape\centering}
 %\titleformat{\section}[block]{\LARGE\scshape\centering}{\thesection.}{1em}{} % Change the look of the section titles
+\begin{tiny}
+
 \bibliography{library}
- 
+ \end{tiny}
 %\end{thebibliography}
 %
 %%----------------------------------------------------------------------------------------
