--- a/Proposal.tex
+++ b/Proposal.tex
@@ -88,11 +88,11 @@ Summary of the research
 \end{center}}    % clear the title
 \begin{abstract}
 \noindent
-To date, studies on non-coding regions of the genome, specifically in cancer, have been limited, which is mainly due to the complex nature of putative functional elements in these regions. In parallel with the ENCODE-project, the interest in these regions has increased: researchers are beginning to study causal non-coding variations in cancer. However, due to the complex nature of cancer (e.g. heterozygous samples, rapid evolution), analysis on consequences of these structural variants has been nearly impossible. 
+To date, studies on non-coding regions of the genome, specifically in cancer, have been limited. This is mainly due to the complex nature of putative functional elements in these regions. In parallel with the ENCODE-project, the interest in these regions has increased: researchers are beginning to study causal non-coding variations in cancer. Due to the increase in popularity and cost-effectiveness of various omics-approaches, more and more data is becoming available. The complexity of integrating and analysing information of these approaches increases with every added omics-layer and/or other dimension (e.g. time-series, treatments). When studying the consequences of structural variants in non-coding regions in cancer, this complexity is further increased due to, for example, heterozygous samples and rapid evolution.
 \medskip
 
 \noindent
-Due to the increase in popularity and cost-effectiveness of various omics-approaches, more and more data is becoming available. The complexity of integrating and analysing information of these approaches increases with every added omics-layer and/or other dimension (e.g. time-series, treatments). The current tools and frameworks for these approaches have two major limitations in their design: scalability and generality (i.e. the possibility to add of more levels and/or dimensions). Moreover, there isn't an option to overview a dataset without filtering, dividing or structuring the data. These limitations restrict the integration of complex datasets, which is needed to truly understand the complex biology of cancer.
+ The current tools and frameworks for these approaches have two major limitations in their design: scalability and generality (i.e. the possibility to add of more levels and/or dimensions). Moreover, there isn't an option to overview a dataset without filtering, dividing or structuring the data. These limitations restrict the integration of complex datasets, which is needed to truly understand the complex biology of cancer.
 \medskip
 
 \noindent Enter the Semantic Web and its Resource Description Framework (RDF). A simple and flexible framework for describing anything about anything.
@@ -144,13 +144,13 @@ Multi-level and -dimensional integrative bioinformatical analysis to elucidate t
 %=================================================
 %=================================================
 %stukje over cancer%Moreover, there already have been successfully studies, linking non-coding regions to colorectal- and skin-cancer\cite{Ongen2014,Huang2013}. 
-The majority of genomics studies is focussed on finding causal genetic variation in the protein-coding regions of the genome. However, these regions amount only to approximately two percent\cite{Lander2001}. One of the major reasons behind this is the relative uncomplicated nature of studying coding regions, as consequence on lower levels (e.g. transcription, proteins) are traceable. A good illustration of the complexity of the non-coding regions is the ENCyclopedia Of DNA Elements (ENCODE)-project\cite{ENCODE}, which contains over fifty different signals. 
+The majority of genomics studies are focussed on finding causal genetic variation in the protein-coding regions of the genome. However, these regions amount only to approximately two percent\cite{Lander2001}. One of the major reasons behind this is the relative uncomplicated nature of studying coding regions, as consequences on lower levels (e.g. transcription, proteins) are traceable\cite{McLaren2010}. This is in contrast with the non-coding regions, which often do not show a linear effect on other levels. A good illustration of the complexity of the non-coding regions is the ENCyclopedia Of DNA Elements (ENCODE)-project\cite{ENCODE}, which contains over fifty different signals. 
 
-The fact that non-coding regions often have roles in regulation of a distant genes (i.e. cis-acting), provides evens more complexity to the analysis of structural variants (SV) in these regions. For example the Pierre Robin Syndrome (PRS): structural variations (deletions or duplications) in the 3mB surrounding the SOX9-gene in specific tissues, are causative to the striking phenotype of undeveloped mandibles and tongue in children\cite{Benko2009,Kurth2009}. Studies on cancer-specific causative non-coding SV's are beginning to emerge in the last two years, including colorectal- and skin-cancer\cite{Ongen2014,Huang2013}. 
+The fact that non-coding regions often have roles in regulation of a distant genes (i.e. cis-acting), provides even more complexity to the analysis of structural variants (SV) in these regions. For example the Pierre Robin Syndrome (PRS): structural variations (deletions or duplications) in the 3Mb surrounding the SOX9-gene in specific tissues, are causative to the striking phenotype of undeveloped mandibles and tongue in children\cite{Benko2009,Kurth2009}. Studies on cancer-specific causative non-coding variation are beginning to emerge in the last two years, including colorectal- and skin-cancer\cite{Ongen2014,Huang2013}, and computational methods for non-coding regions are just starting to come up in the literature of 2014\cite{Khurana2013,Kircher2014}.  
 \medskip
 
 \noindent
-The amount of (public) biological data has exploded in the last years -even outpacing Moore's law\footnote{A two-fold in- or decrease of a variable (here: dollar/nt) per two years.}- which is the result of the advances in omics-technologies like Next-Generation Sequencing (NGS) and Mass-Spectrometry (MS), in both performance and costs. Aside from the sheer size, a second factor for the highly complex nature of current biomedical research is the addition of other dimensions, like time-series or treatments to the aforementioned omics-levels and other types of data from the same level. While there are plenty of studies on single-level data analysis, both academia and industry agree that data-integration is key to understanding the complex nature of biology more thoroughly \citep{Gomez-Cabrero2014, Huttenhower2010, Searls2005, Hamid2009}. 
+The amount of (public) biological data has exploded in the last years (even outpacing Moore's law\footnote{A two-fold in- or decrease of a variable (here: dollar/nt) per two years.}) which is the result of the advances in omics-technologies like Next-Generation Sequencing (NGS) and Mass-Spectrometry (MS), in both performance and costs. Aside from the sheer size, a second factor for the highly complex nature of current biomedical research is the addition of other dimensions, like time-series or treatments to the aforementioned omics-levels and other types of data from the same level. While there are plenty of studies on single-level data analysis, both academia and industry agree that data-integration is key to understanding the complex nature of biology more thoroughly \citep{Gomez-Cabrero2014, Huttenhower2010, Searls2005, Hamid2009}. 
 
 However, only a few layers and/or dimensions have been integrated per study and results are -for the most part- cherry picked, instead of fully systematic. This is mainly due to the methods used in integration-studies, which are limited due to the large amounts of parsing-time (i.e. the time to convert various file/region-formats): most of them are set up in the same manner as individual-level experiments, whereafter they are combined. These methods cause high amounts of analytical time, as was the case in the study of \citet{Munoz2011}: every two months of data-accumulation costed two years of analysis. The limited number of truly integrative studies use computational approaches to reconstruct biological networks. While this is a valid strategy, scaling the analysis from the bacteria used by \citet{Karr2012} and \citet{Lerman2012} to multi-cellular organisms proves to be difficult. The most obvious reasons for this are the complexity of the used mathematical methods, the integration of multiple data-sources (with varying file-formats) and/or the use of a inflexible database-structures. 
 \medskip
@@ -175,7 +175,6 @@ The JavaScript library Data Driven Documents (\textit{D3.js}) is well suited for
 \noindent 
 The heterogeneous samples and datasets of cancer make it one of the most computationally demanding types of integrative biology. \textbf{We propose to use our methods to study to consequences of structural variations at non-coding loci in cancer on other levels.}  These methods will enable research in this technical challenging topic, by decreasing the computational burden of data-handling, and increase the cognitive abilities of the user, by providing integrative visual interfaces. 
 
-While studies are starting to find the consequences of structural variations in coding regions (due to the relative ease of finding consequential changes in transcript and protein\cite{McLaren2010}), the first computational methods for non-coding regions are just starting to come up in the literature of 2014\cite{Khurana2013,Kircher2014}. The young nature of the used methods is visible in their output: only a prioritisation-score, based on the probability to be a causal variant, is given. Combining these scores with our linked-data methods -using both self-generated and public data- would lead to further understanding of the mechanisms of cancer. 
 
 
 %Usage case: structural variants of non-coding regions in cancer
